--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Hello, world!</h1>
+<h1>Hello, world! Myself</h1>
 <i class="bi bi-arrow-right" style="font-size: 60px; color: brown"></i>
 <div class="section-info container text-center">
     <div class="row">
